# subgraph-contract-creation

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  schema.graphql  schema.sql  substreams.yaml
block-index/: Makefile  README.md  contract-creation-block-index-v0.2.0.spkg  contract-creation-block-index-v0.3.0.spkg  substreams.yaml
proto/: EVMContractCreation.proto  contract_creation.proto
src/: lib.rs  map.rs  maps.rs  sinks.rs  utils.rs
src/pb/: EVMContractCreation.v1.rs  contract_creation.v1.rs  mod.rs  sf.substreams.sink.database.v1.rs
subgraphs/: Makefile
subgraphs/arbitrum-one/: Makefile  subgraph.yaml
subgraphs/bsc/: Makefile  subgraph.yaml
subgraphs/bsc/contract-creation-bnb/: package.json  subgraph.yaml
subgraphs/eth/: subgraph.yaml
subgraphs/mainnet/: Makefile  subgraph.yaml
subgraphs/optimism/: Makefile  subgraph.yaml
