[package]
name = "contract_creation"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
substreams = "0.6.0"
substreams-ethereum = "0.10.0"
substreams-database-change = "2.0.0"
substreams-entity-change = "2.0.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
